getting ready for 2019

--- a/content/content/intro/05_syllabus.md.erb
+++ b/content/content/intro/05_syllabus.md.erb
@@ -39,6 +39,6 @@ Students have all kinds of computers. I have nothing against Microsoft Windows, 
 <%= include_topic :syllabus_change_policy %>
 
 #### Crucial other Links
-* <%= link_to_background :goals_cosi105 %>
+* <%= link_to_intro :cosi105b_goals %>
 * <%= link_to_intro :course_toc %>
-* <%= link_to_background :grading %>
+* <%= link_to_intro :cosi105b_grading %>
