--- a/content/content/lectures/part1/05_welcome.md.erb
+++ b/content/content/lectures/part1/05_welcome.md.erb
@@ -19,7 +19,7 @@ cat: general
 
 #### About this course
 * What is this course about and how is it different from the prerequisite [Cosi166b - Capstone in Software Entrepreneurs](http://cosi166b.s3-website-us-west-2.amazonaws.com/content/intro/syllabus.md/)?
-* Heres what you should learn in this course: <%= link_to_background :goals_cosi105 %>
+* Heres what you should learn in this course: <%= link_to_intro :cosi105b_goals %>
 * Why do I think the content of this course is important? Why might you find it important and useful?
 * Could this course change your life? YES!
 
@@ -36,13 +36,10 @@ cat: general
 * My experience teaching this course is that most of you will need this to be successful.
 * There is no lecture. Sometimes there's a hands-on workshop. Other times you work on your projects or homework. Either way we are available to help out (usually it's homework related.)
 
-#### 15 Minute Quick Assignment
-* [15 Minute Leveling Exercise](https://goo.gl/forms/C8cqan9CvrwOLb8m2)
-
 #### Homework Info
 * Yes there is a fair bit of homework
 * Where to find it and how to hand it in: <%= link_to_topic :homework %>
-* Here's more information about <%= link_to_background :grading %>
+* Here's more information about <%= link_to_intro :cosi105b_grading %>
 
 #### Project
 
