--- a/layouts/nav-menus.html.erb
+++ b/layouts/nav-menus.html.erb
@@ -15,6 +15,9 @@
         <a href="/content/topics/nt/nt_outline.md/">Project Outline</a>
       </li>
       <li>
+        <a href="/content/intro/15_nt_links.md/">NanoTwitter</a>
+      </li>
+      <li>
         <a href="/content/topics/syllabus/cosi105b_final_deliverables.md/">Deliverables</a>
       </li>
     </ul>
