--- a/content/content/intro/15_nt_links.md.erb
+++ b/content/content/intro/15_nt_links.md.erb
@@ -6,13 +6,13 @@ title: nanoTwitter
 * <%= link_to_topic :nt_outline %>
 * <%= link_to_topic :nt_functionality %>
 
-#### Twitter's Architecture
+#### Twitter's Architecture Reading
 * [Twitter: From Ruby on Rails to the JVM](http://youtu.be/ohHdZXnsNi8)
 * [Real Time Delivery Architecture at Twitter](http://www.infoq.com/presentations/Real-Time-Delivery-Twitter)
 * [Timelines at Scale](http://www.infoq.com/presentations/Twitter-Timeline-Scalability)
 
-#### Scaling
+#### Scaling Reading
 * [Rare peek into the massive scale of AWS](http://www.enterprisetech.com/2014/11/14/rare-peek-massive-scale-aws/)
 
-#### Loader.io
+#### Loader.io Tips
 * [Loader.io Test Types](http://support.loader.io/article/16-test-types)
