--- a/content/content/intro/05_syllabus.md.erb
+++ b/content/content/intro/05_syllabus.md.erb
@@ -8,7 +8,7 @@ title: Syllabus
 <% tbh.row("Location", "TBD") %>
 <% tbh.row("Office Hours", "Go to this link to reserve an appointment: https://calendly.com/pitosalas/ftf") %>
 <% tbh.row("Class Times", "Tuesday and Thursday, 3:30pm to 4:50pm\<br\>
-To be successful in this class it is strongly recommended that students attend the two hour recitation on Wednesdays 5:00pm-6:20pm") %>
+To be successful in this class it is strongly recommended that students attend the recitation on Wednesdays 5:00pm-6:20pm") %>
 <% tbh.row("Location", "TBD") %>
 <% tbh.row("Prerequisites", "Cosi21a and Cosi166b (or permission)") %>
 <% tbh.row("Homework", "Daily homework assignments; Major nanoTwitter project; Team assignments. Success in this 4 credit hour course is based on the expectation that students will spend a minimum of 9 hours of study time per week in preparation for class (readings, papers, discussion sections, preparation for exams, etc.).  ") %>
