--- a/content/content/lectures/part1/05_welcome.md.erb
+++ b/content/content/lectures/part1/05_welcome.md.erb
@@ -23,6 +23,10 @@ cat: general
 * Why do I think the content of this course is important? Why might you find it important and useful?
 * Could this course change your life? YES!
 
+#### In-class Quiz
+
+* 30 Minutes
+
 #### Logistics
 
 <%= callout("NB", " The prime source for this course is this web site itself!")%>
@@ -48,5 +52,5 @@ cat: general
 * Notes about <%= link_to_topic :working_in_teams %>
 
 #### Next Class
-<%= callout("Remember", " Recitation is Tuesday at 5:00pm and every week!") %>
+<%= callout("Remember", " Lab/Workshop/Recitation is Wednesday at 5:00pm and every week!") %>
 * Look at homework: <%= link_to_next_lecture %>
