--- a/content/content/lectures/part1/20_ruby_review.md.erb
+++ b/content/content/lectures/part1/20_ruby_review.md.erb
@@ -8,7 +8,7 @@ homework: 1) First draft of IMS
 
 <%= homework_hdr %>
 
-1. <%= partbadge %> <%= zipbadge %> **Programming:** Do <%= link_to_topic :pa_interactive_music %>. This assignment is designed to have you practice and demonstrate your ruby programming skills. It has no complicated algorithms, but you will have to know how to design a program, design a few classes, use a gem, process user input. <%= deliverable "First draft of solution, zip up the directory and submit to Latte." %>
+1. <%= partbadge %> <%= zipbadge %> **Programming:** Begin <%= link_to_topic :pa_interactive_music %>. This assignment is designed to have you practice and demonstrate your ruby programming skills. It has no complicated algorithms, but you will have to know how to design a program, design a few classes, use a gem, process user input. <%= deliverable "First draft of solution, zip up the directory and submit to Latte." %>
 
 #### Ruby Live Coding Demonstration
 * <%= link_to_topic :intro_tut %>
@@ -26,6 +26,7 @@ homework: 1) First draft of IMS
   * Methods should be less than 15 lines long
   * No standalone code or definitions. Everything should be part of a class
   * No global variables
+  * Instance variables are always private
   * Don't use @@foo
   * instead of a method called "display" on a class, add a method called to_s which returns the class state as a text string. That way you can do a puts on it.
 
