--- a/content/content/lectures/part1/25_web_intro.md.erb
+++ b/content/content/lectures/part1/25_web_intro.md.erb
@@ -1,11 +1,10 @@
 ---
-title: Web Intro
-desc: We are going to look at some fundamentals of how the web works
+title: Internet and Web Review
+desc: Review fundamentals of how the web works
 homework: 1) Resubmit and complete programming assigment
 cat: web
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
 
 1. <%= zipbadge %> **Programming:** Submit your final <%= link_to_topic :pa_interactive_music %>. This assignment is designed to have you practice and demonstrate your ruby programming skills. It has no complicated algorithms, but you will have to know how to design a program, design a few classes, use a gem, process user input, and write some tests. <%= deliverable "Your solution to the programming probem." %>
 
