--- a/content/content/lectures/part1/30_webservers.md.erb
+++ b/content/content/lectures/part1/30_webservers.md.erb
@@ -5,13 +5,11 @@ homework: TBD
 cat: web
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
 
-<%= include_topic :how_web_servers_work %>
-
-<%= include_topic :www %>
-
-<%= include_topic :web_formats_protocols %>
+#### Review
+* <%= link_to_topic :how_web_servers_work %>
+* <%= link_to_topic :www %>
+* <%= link_to_topic :web_formats_protocols %>
 
 <%= include_topic :what_is_sinatra %>
 
