--- a/content/content/lectures/part1/35_sinatra_continued.md.erb
+++ b/content/content/lectures/part1/35_sinatra_continued.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Introduction to Sinatra
+title: Sinatra Continued
 desc: Sinatra is a a very lightweight Ruby based web server. We start playing with it.
 homework: 1) Study in depth [SODRR] Chapter 1, and submit warmup exercises; 2) Implement the code from that Chapter yourself.
 cat: web
