Checkpoint work to git

--- a/content/content/lectures/part1/30_sinatra_intro.md.erb
+++ b/content/content/lectures/part1/30_sinatra_intro.md.erb
@@ -5,9 +5,13 @@ homework: 1) Udacity Intro to Sinatra course
 cat: web
 ---
 <%= homework_hdr %>
-* <%= partbadge %> Sign up to Udacity and take this free course: [Udacity Dynamic Web Applications with Sinatra](https://www.udacity.com/course/dynamic-web-applications-with-sinatra--ud268). Take all the lessons and do all the assignments.. Do all the assignments and when you are done, answer the following warmup questions:
-  * How is Routing in Sinatra different from Rails technique?
-  * Where is the main program of Sinatra written? How does **it** get invoked?
+
+1. <%= partbadge %> <%= pdfbadge %> <%= timebadge %> **Udacity Sinatra Course**: Sign up to Udacity and take this easy free course: [Udacity Dynamic Web Applications with Sinatra](https://www.udacity.com/course/dynamic-web-applications-with-sinatra--ud268). Take all the lessons and do all the assignments, when you are done, answer the following warmup questions:
+
+    * How is Routing in Sinatra different from Rails technique?
+    * Where is the main program of Sinatra written? How does **it** get invoked?
+    * These examples have no database. How would you introduce data from a database into a Sinatra App? Be detailed.
+    * <%= deliverable "pdf with your responses" %>
 
 #### Review
 * <%= link_to_topic :how_web_servers_work %>
