--- a/content/content/lectures/part1/35_sinatra_continued.md.erb
+++ b/content/content/lectures/part1/35_sinatra_continued.md.erb
@@ -1,12 +1,12 @@
 ---
 title: Sinatra Continued
 desc: Sinatra is a a very lightweight Ruby based web server. We start playing with it.
-homework: 1) Study in depth [SODRR] Chapter 1, and submit warmup exercises; 2) Implement the code from that Chapter yourself.
+homework: 1) Read "First Sinatra" and submit warmup exercises; 2) Implement the code from that Chapter yourself.
 cat: web
 ---
 <%= homework_hdr %>
 
-1. <%= timebadge %> <%= partbadge %> **Read:** Study Service Oriented Design in Ruby and Rails \[SODDR\] Chapter 1, as you watch this video. In the video I narrate concepts and demonstrate the actual coding that is done in that chapter. It covers much of the same ground as the last tutorial, but goes a little further. Please answer the following warmup questions:
+1. <%= timebadge %> <%= partbadge %> **Read:** <%= link_to_topic :first_sinatra %> and try to follow along and build the same app yourself. Now please answer these warmup questions:
     * In your own words, what is a "Service"? Can you think of an example which is NOT mentioned in the book? Can you imagine an example of a "Service" that would be provided by nanoTwitter? [By the way, other words you will encounter for a "service" are a web service or a web API.]
     * ActiveRecord is an example of an ORM, Object Relational Mapper. What does an ORM do? Why is it useful? ActiveRecord is the most popular Ruby ORM. Do some googling and find another very popular Ruby ORM. (I don't have a specific one in mind, there are several popular ones to pick from.)
     * Can you explain the role of the "Client Library" in the code you wrote?
