Checkpoint work to git

--- a/content/content/lectures/part1/05_welcome.md.erb
+++ b/content/content/lectures/part1/05_welcome.md.erb
@@ -12,30 +12,29 @@ cat: general
 
 1. **Ruby**: Review your Ruby knowledge by going through [Learn Ruby The Hard Way](http://learnrubythehardway.org/book/preface.html). You should be at least up to Lesson 23. This will cover many of the basics up to functions. There is nothing to hand in here. But it's crucial that you really do the lessons and try the hands on work. No reading on your phone while on the treadmill! You shoring up the foundations on which your success in this course will be built!
 
-#### Introductions`
+#### Introductions
 * Introduce Pito, and how I ended up here. Look at: <%= link_to_topic :pitofaq %>
 * Why do I do this? My commitment to teaching and student learning.
 * TAs introduce themselves
 
 #### About this course
-* What is this course about and how is it different from the prerequisite [Cosi166b - Capstone in Software Entrepreneurs](http://cosi166b.s3-website-us-west-2.amazonaws.com/content/intro/syllabus.md/)?
+* What is this course about and how is it different from the prerequisite [Cosi166b - Capstone in Software Engineering](http://cosi166b.s3-website-us-west-2.amazonaws.com)?
 * Heres what you should learn in this course: <%= link_to_intro :cosi105b_goals %>
 * Why do I think the content of this course is important? Why might you find it important and useful?
 * Could this course change your life? YES!
-
+ 
 #### In-class Quiz
 
-* 30 Minutes
+* 20 Minutes
+**[Click here and begin NOW!](https://goo.gl/forms/GLuMts66D4zsFSWo1)**
 
 #### Logistics
 
 <%= callout("NB", " The prime source for this course is this web site itself!")%>
 
-* Here are the <%= link_to_topic :books_cosi105 %>
 * Let's take a tour of the web site
 * Let's take a tour of [Latte for this course](https://moodle2.brandeis.edu/course/view.php?id=15712)
 
-#### Recitation
 <%= callout("NB", " Every Wednesday 5:00 PM–6:20 PM we have a lab/workshop") %>
 * My experience teaching this course is that most of you will need this to be successful.
 * There is no lecture. Sometimes there's a hands-on workshop. Other times you work on your projects or homework. Either way we are available to help out (usually it's homework related.)
