--- a/content/content/lectures/part2/01_sinatra_twitter.md.erb
+++ b/content/content/lectures/part2/01_sinatra_twitter.md.erb
@@ -7,7 +7,7 @@ cat: nt
 <%= homework_hdr %>
 **Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
 
-1. <%= pdfbadge %> **Schema Design:** Please do the following <%= link_to_topic :hw_schema_design2 %>. I ask for four, increasingly difficult schema designs. Notice that I specify an exact format in which to write the responses! <%= deliverable "Complete the design challenges." %>
+1. <%= zipbadge %> **Code:** Use what you've practiced in the Tutorial and Part 1 and 2 of the series and do <%= link_to_topic :pa_sinatra_evite_1 %>. Do the code in your portfolio, creating a new directory. Please name the directory: `sinatra-evite`. <%= deliverable "Zip up the resulting code and submit it to Latte" %>
 1. <%= pdfbadge %> **Twitter**: Clarify your understanding of twitter.com. If you don't use Twitter or don't 'believe in it', still sign up for an account just to play. Make sure you understand each of the core concepts of Twitter:
 
     * a username (aka Twitter handle) your name on twitter
