added technology table

--- a/content/content/lectures/part1/35_sinatra_continued.md.erb
+++ b/content/content/lectures/part1/35_sinatra_continued.md.erb
@@ -20,6 +20,8 @@ cat: web
 * Rails Guide about [ActiveRecord Migration Guide](https://edgeguides.rubyonrails.org/active_record_migrations.html)
 * The readme of Sinatra is a great resource: [Sinatra Readme](http://www.sinatrarb.com/intro.html)
 * A good basic book on sinatra is: [Sinatra Up and Running](http://www.amazon.com/Sinatra-Up-Running-Alan-Harris/dp/1449304230)
+* [Sinatra Intro](http://www.sinatrarb.com/intro.html)
+* [Simple Database Driven Website with Heroku](https://samuelstern.wordpress.com/2012/11/28/making-a-simple-database-driven-website-with-sinatra-and-heroku/)
 * Reminder: <%= link_to_topic :what_is_sinatra %>
 
 #### What is a web service and an SOA?
@@ -27,16 +29,13 @@ cat: web
   * instead of returning HTML (for web browsers to render) it returns data (for other apps to use!) Such a server is often said to be delivering a *web service* or *web API*.
   * This brings the notion of modularity, isolation, information hiding all the way up to the level of full servers. And creating an application can now become the stringing together of web services, each of which might be delivered by a different company (think Amazon, Heroku, Apple, IBM)
   * <%= link_to_topic :models %>
-
 <%= include_topic :ar_db_mechanics %>
 
-#### Walk through some code
-* [SOTL-simple-service](https://github.com/pitosalas/sotl-user-service)
+#### Lets look at some code
+* Follow along on your computer if you like!
+* You can find the example SOTL-simple-service in **my [Sinatra Examples](https://github.com/pitosalas/sinatra_examples) repo.**
 
-* [Sinatra Intro](http://www.sinatrarb.com/intro.html)
-* [Simple Database Driven Website with Heroku](https://samuelstern.wordpress.com/2012/11/28/making-a-simple-database-driven-website-with-sinatra-and-heroku/)
-
-### Technologies
+### Software Engineering and technologies
 <%= include_topic :sinatra_technology_options %>
 
 #### Next Class
