--- a/content/bootstrap/css/custom.css
+++ b/content/bootstrap/css/custom.css
@@ -83,8 +83,8 @@ h1, h2, h3, h4, h5{
 }
 
 h3 {
-  padding-top: 20px
-  padding-bottom: 20px;
+  padding-top: 20px;
+  /* padding-bottom: 10px; */
 }
 
 /* h3.body-header {
