Checkpoint work to git

--- a/content/content/lectures/part2/01_sinatra_twitter.md.erb
+++ b/content/content/lectures/part2/01_sinatra_twitter.md.erb
@@ -23,7 +23,10 @@ cat: nt
 * Lets look at some students' schema design
 * Let's talk about the features in the real Twitter
 
-#### A worked out example
+#### Introduction to SOA
+<%= include_topic :sinatra_series_3 %>
+
+### A worked out example
 * <%= include_topic :hands_on_sinatra_db_work %>
 
 #### Next Class
