--- a/content/content/lectures/part1/25_web_intro.md.erb
+++ b/content/content/lectures/part1/25_web_intro.md.erb
@@ -13,8 +13,7 @@ cat: web
 * There are many gems for using HTTP from Ruby. Here's a comprehensive discussion of one of the big ones, [http.rb is great](https://twin.github.io/httprb-is-great/)
 * Here's a nice introduction to writing Ruby-like Ruby: [Let's Read! - Eloquent Ruby](https://medium.com/@baweaver/lets-read-eloquent-ruby-ch-1-b2115d1416a6)
 * Here's a great and fairly thorough introduciton to tcpip and networking, [TCP/IP Networking Guide](http://www.penguintutor.com/linux/basic-network-reference)
-* And only for the super interested, if you want to go deeper into how TCP/IP works, I recommend [TCP/IP Illustrated](Of course if you want to go deeper, I recommend this book: https://www.amazon.com/TCP-Illustrated-Protocols-Addison-Wesley-Professional/dp/0321336313/ref=sr_1_6?s=books&ie=UTF8&qid=1548377328&sr=1-6&keywords=tcpip+networking
-).
+* And only for the super interested, if you want to go deeper into how TCP/IP works, I recommend [TCP/IP Illustrated](Of course if you want to go deeper, I recommend this book: [TCP/IP Illustrated](https://www.amazon.com/TCP-Illustrated-Protocols-Addison-Wesley-Professional/dp/0321336313/ref=sr_1_6?s=books&ie=UTF8&qid=1548377328&sr=1-6&keywords=tcpip+networking).
 * And this is just interesting: [How an internet mapping glitch turned a random kansas farm into a digital hell](https://splinternews.com/how-an-internet-mapping-glitch-turned-a-random-kansas-f-1793856052)
 
 
