--- a/content/content/lectures/part1/45_sinatra_twitter.md.erb
+++ b/content/content/lectures/part1/45_sinatra_twitter.md.erb
@@ -5,19 +5,17 @@ homework: 1) Schema Design; 2) Write up definitions of the key twitter functions
 cat: nt
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Portfolio | <%=zipbadge %>: Zipped
 
-1. <%= zipbadge %> **Code:** Use what you've practiced in the Tutorial and Part 1 and 2 of the series and do <%= link_to_topic :pa_sinatra_evite_1 %>. Do the code in your portfolio, creating a new directory. Please name the directory: `sinatra-evite`. <%= deliverable "Zip up the resulting code and submit it to Latte" %>
 1. <%= pdfbadge %> **Twitter**: Clarify your understanding of twitter.com. If you don't use Twitter or don't 'believe in it', still sign up for an account just to play. Make sure you understand each of the core concepts of Twitter:
-
     * a username (aka Twitter handle) your name on twitter
     * to "mention":when you write @pitosalas in a tweet;
     * to follow: when you ask to see tweets from someone else;
-    * \[n,v\] "tweet" or "post" or "update": the 140 character message you can send with twitter.
+    * \[noun and verb form\] "tweet" or "post" or "update": the 140 character message you can send with twitter.
     * a twitter stream or feed: all the tweets that a certain user has posted
     * a #hashtag: a way to tag any tweet, which can be searched later
     * timeline or twitter feed: Your home stream or timeline is where you see all the tweets shared by the people you follow
     * <%= deliverable "Your 2 sentence definitions of each of the concepts listed above. Submit as a pdf." %>
+1. <%= partbadge %> <%= zipbadge %> <%= pdfbadge %> **Read and Implement:** <%= link_to_topic :sinatra_series_2 %> and try to follow along and build the same app yourself. **Do the exercises** at the end of the reading and answer the warmup questions. <%= deliverable "Warmups response as a pdf; and your code as a .zip." %>
 
 #### Discussion about homework
 * Lets look at some students' schema design
@@ -26,8 +24,8 @@ cat: nt
 #### Introduction to SOA
 <%= include_topic :sinatra_series_3 %>
 
-### A worked out example
-* <%= include_topic :hands_on_sinatra_db_work %>
+### Another wworked out example
+* <%= link_to_topic :hands_on_sinatra_db_work %>
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
