Checkpoint work to git

--- a/content/content/lectures/part1/45_sinatra_twitter.md.erb
+++ b/content/content/lectures/part1/45_sinatra_twitter.md.erb
@@ -15,7 +15,7 @@ cat: nt
     * a #hashtag: a way to tag any tweet, which can be searched later
     * timeline or twitter feed: Your home stream or timeline is where you see all the tweets shared by the people you follow
     * <%= deliverable "Your 2 sentence definitions of each of the concepts listed above. Submit as a pdf." %>
-1. <%= partbadge %> <%= zipbadge %> <%= pdfbadge %> **Read and Implement:** <%= link_to_topic :sinatra_series_2 %> and try to follow along and build the same app yourself. **Do the exercises** at the end of the reading and answer the warmup questions. <%= deliverable "Warmups response as a pdf; and your code as a .zip." %>
+1. <%= zipbadge %> <%= pdfbadge %> **Read and Implement:** <%= link_to_topic :sinatra_series_2 %> and try to follow along and build the same app yourself. **Do the exercises** at the end of the reading and answer the warmup questions. <%= deliverable "Warmups response as a pdf; and your code as a .zip." %>
 
 #### Discussion about homework
 * Lets look at some students' schema design
