--- a/content/content/lectures/part1/45_sinatra_twitter.md.erb
+++ b/content/content/lectures/part1/45_sinatra_twitter.md.erb
@@ -6,15 +6,17 @@ cat: nt
 ---
 <%= homework_hdr %>
 
-1. <%= pdfbadge %> **Twitter**: Clarify your understanding of twitter.com. If you don't use Twitter or don't 'believe in it', still sign up for an account just to play. Make sure you understand each of the core concepts of Twitter:
-    * a username (aka Twitter handle) your name on twitter
+1. <%= pdfbadge %> <% partbadge %> **Twitter**: Clarify your understanding of twitter.com. If you don't use Twitter or don't 'believe in it', still sign up for an account just to play. Make sure you understand each of the core concepts of Twitter:
+    * a username (aka Twitter handle) 
+    * the homepage
     * to "mention":when you write @pitosalas in a tweet;
     * to follow: when you ask to see tweets from someone else;
     * \[noun and verb form\] "tweet" or "post" or "update": the 140 character message you can send with twitter.
-    * a twitter stream or feed: all the tweets that a certain user has posted
-    * a #hashtag: a way to tag any tweet, which can be searched later
-    * timeline or twitter feed: Your home stream or timeline is where you see all the tweets shared by the people you follow
-    * <%= deliverable "Your 2 sentence definitions of each of the concepts listed above. Submit as a pdf." %>
+    * a #hashtag: a phrase preceded by a poundsign. Where??
+    * timeline or twitter feed: A list of tweets that are displayed in certain places in the UI
+    * to "comment": Commenting on someone's tweet
+    * to "retweet": Display someone elses tweet on your timeline.
+    * <%= deliverable "A more technical explanation of exactly what each command does. For example, if I "comment" where does that comment appear? What exactly is displayed on the homepage? Etc. Submit as a pdf." %>
 1. <%= zipbadge %> <%= pdfbadge %> **Read and Implement:** <%= link_to_topic :sinatra_series_2 %> and try to follow along and build the same app yourself. **Do the exercises** at the end of the reading and answer the warmup questions. <%= deliverable "Warmups response as a pdf; and your code as a .zip." %>
 
 #### Discussion about homework
