updated more of the app

--- a/content/content/lectures/part2/20_sinatra_architecture.md.erb
+++ b/content/content/lectures/part2/20_sinatra_architecture.md.erb
@@ -7,13 +7,8 @@ cat: web
 
 <%= homework_hdr %>
 
+1. <%= zipbadge %> <%= pdfbadge %> **Read and Implement:** <%= link_to_topic :sinatra_series_4 %> and try to follow along and build the same app yourself. **Do the exercises** at the end of the reading and answer the warmup questions. <%= deliverable "Warmups response as a pdf; and your code as a .zip." %>
 1. <%= partbadge %> <%= codebadge %> **Complete nt 0.1 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
-
-#### Discussion
-* Discussion about Chapter 2, what is a service and related questions
-  * SOA vs SOD vs Restful Design vs. Microservices
-  * What is business logic?
-  * Why might Sinatra be better than Rails for SOA?
 
 #### Walk through of a basic scenario
 * Baseball scoring application - First cut
