--- a/content/content/lectures/part2/25_cloudarch.md.erb
+++ b/content/content/lectures/part2/25_cloudarch.md.erb
@@ -1,21 +1,15 @@
 ---
 title: Architecture and the Cloud
 desc: We start going in to more complicated core architectures, which will serve as the foundation for nanoTwitter
-homework: 1) Study in depth [SODDR] Chapter 3, and submit warmup questions in Latte; 2) Teams continue to work on nT 0.2
+homework: 1) Submit Sinatra Series 4 assignment 2) Teams continue to work on nT
 cat: nt
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Code | <%=zipbadge %>: Zipped
 
-1.  <%= partbadge %> <%= timebadge %> **Read Chapter 3:** Read \[SODRR\] Chapter 3. This chapter introduces a running example of this book. It is a social feed reader. It's analogous but different from our nanoTwitter. You should get lots of good ideas from this chapter to use in nT. In this chapter you learn what all the database tables (and therefore what the Models are.) Based on what we've covered so far you should be able to follow it. This chapter mentions Rails. Rails is a bigger sort-of-superset of Sinatra. They are both Ruby libraries. In this class we will be using Sinatra (not Rails). Don't get confused:
+1. <%= zipbadge %> <%= pdfbadge %> **Read and implement:** <%= link_to_topic :sinatra_series_4 %> and try to follow along in code. Build the models and the tests, no views or routing! Look at the end of the writup for specifics on the deliverables. This is an individual project! <%= deliverable ("Zipped up code plus readme") %>
 
-    We **are** using ActiveRecord which is a separable Rails library which is also used in Sinatra. It is the "Object Relational Mapper." It is most important that you take the time to understand the overall set of tables, why they exist and how they relate to each other and apply them to the next step of the homework. Please respond to these warmup questions:
-
-    * How is the Social Feed Reader different from nanoTwitter? This chapter describes a social feed reader which from the user perspective has some characteristics in common with nanoTwitter. But they are not at all the same. Focusing on the user perspective, name 2 things that are exactly the same between the two, and two things which are fundamentally different.
-    * Job of the Feed, Subscription and Entry Models. In chapter 3, he describes three models as part of the overall data model: Feed, Subscription and Entry. Explain what kind of data each model contains, what the relationships are that it has, and what exactly the meaning or purpose is of that model. Also explain what the analog of each of those models would be to your nanoTwitter data model.
-    * Still Confused? Mention 2 topics or explanations or ideas from the reading that are still confusing. If none of it is confusing, say so. And add the two ideas, explanations or concepts that yove learned that you think are particularly interesting or important. Please make it clear whether it's a confusion or an insight.
-    *  <%= deliverable "Respond to warmup questions from this chapter by 8am" %>
-  1. **Teams continue to work on nanoTwitter 0.2**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
+##### Ongoing work
+* **Teams continue to work on nanoTwitter**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 #### Interesting but not required extra reading
 * [Types of Cloud Computing](https://aws.amazon.com/types-of-cloud-computing/)
@@ -27,17 +21,8 @@ cat: nt
   * Asynchronous communication
   * If supplier is down or slow, this doesn't harm the consumer
   * Using the database as the queue
-* Questions from Warmups
-  * Whats the difference between a feature and a potential service?
-  * What is background processing and what is it useful for?
-  * What are downsides of converting a product into SOD, or a feature into a service?
-  * What is a denormalized table and why was it mentioned?
-
-* Review new and improved <%= link_to_topic :nt_outline %>
-
 
 <%= include_topic :thecloud %>
-
 <%= include_topic :devops %>
 
 #### Next Class
