--- a/content/content/lectures/part2/30_architecting_for_scale.md.erb
+++ b/content/content/lectures/part2/30_architecting_for_scale.md.erb
@@ -5,14 +5,8 @@ homework: 1) Study SODRR Chapter 4 in depth, submit warmup questions in Latte; 2
 cat: scale
 ---
 <%= homework_hdr %>
-**Legend**: <%=partbadge%>: Participation | <%= timebadge %>: Early | <%= pdfbadge %>: PDF |  <%=cloudbadge %>: Code | <%=zipbadge %>: Zipped
 
-1. <%= timebadge %> <%= partbadge %> Read \[SODRR\] Chapter 4. This is a hard, conceptual chapter. You will want to come back to it later in the course. This chapter goes into the next level of detail in the actual design of working servives in SOA or SOD. Here are your warmup questions:
-    * In this chapter, and during the course so far, we talk about Services. They are the core concept of partitioning the workload into services. What exactly is meant by a 'service'. Why would you choose to partition it a certain way? For nanoTwitter give an example one bit of functionality that could be partitioned into a separate service and a reason why one would do this.
-    * Whatever the reason, once we decide to partition out some functionality as service, we need to design its implementation. Explain the what is meant by the Interace (API) design of the service. What is the relationship with HTTP and the URI?
-    * Can you come up with a nanoTwitter API which would require information from multiple models to be returned, and can you see why that might make sense. Think about information hiding, or efficiency, or isolation, or other considerations.
-    * Please mention one or two concepts or topics from this reading that you didn't follow or would like to learn more about.
-    * <%= deliverable("Find and respond to the warmups in latte") %>
+1. <%= partbadge %> Read and think about <%= link_to_topic :sinatra_series_5 %> and answer the warmup questions that are stated there. <%= deliverable "Pdf with your responses" %>
 1. <%= partbadge %> <%= codebadge %> **Complete nt 0.2 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Discussion
