--- a/content/content/lectures/part3/55_scl_logging.md.erb
+++ b/content/content/lectures/part3/55_scl_logging.md.erb
@@ -5,6 +5,7 @@ homework: 1) TBD
 cat: scale
 ---
 <%= homework_hdr %>
+* Read: https://medium.freecodecamp.org/how-to-save-hours-of-debugging-with-logs-6989cc533370
 
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
