--- a/content/content/lectures/part3/40_scl_concur.md.erb
+++ b/content/content/lectures/part3/40_scl_concur.md.erb
@@ -23,7 +23,7 @@ cat: scale
 
 #### Technical Presentation
 
-<%= callout("Presentation", " Team Fantastic Four will give a technical presentation on RabbitMQ and Messaging") %>
+<%= callout("Presentation", " TBD") %>
 
 <%= include_topic :scaling_concur %>
 <%= include_topic :scaling_async %>
