--- a/content/content/lectures/part3/60_scl_containers.md.erb
+++ b/content/content/lectures/part3/60_scl_containers.md.erb
@@ -6,5 +6,8 @@ cat: scale
 ---
 <%= homework_hdr %>
 
+#### Tech Presentation
+
+<%= callout("Presentation", " TBD") %>
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
