--- a/content/content/lectures/part3/55_scl_logging.md.erb
+++ b/content/content/lectures/part3/55_scl_logging.md.erb
@@ -7,5 +7,9 @@ cat: scale
 <%= homework_hdr %>
 * Read: https://medium.freecodecamp.org/how-to-save-hours-of-debugging-with-logs-6989cc533370
 
+
+#### Tech Presentation
+
+<%= callout("Presentation", " TBD") %>
 #### Next Class
 * Look at homework: <%= link_to_next_lecture %>
