--- a/content/content/intro/20_tech_presentations.md.erb
+++ b/content/content/intro/20_tech_presentations.md.erb
@@ -1,9 +1,9 @@
 ---
 title: Tech Presentations
 ---
-#### Intro
+##### Intro
 
-During 6 classes towards the end of the semester, each team will prepare and present an in depth study of a technology or principle that they have independently uncovered and chosen to apply in nanoTwitter.
+Over the next 12 classes each student will give a techical presentation. I will reserve 30 minutes at the start of each class for the presentation. The topics can be selected from the list below or you can propose new ones. Here are the guidelines
 
 <%= include_topic :tech_pres %>
 
@@ -13,10 +13,15 @@ During 6 classes towards the end of the semester, each team will prepare and pre
 <%= tbh.render %>
 
 ##### Potential Topics are:
-* React or other client JS library'
-* GraphQL
-* Push Processing and Web Sockets
-* NoSQL Databases
-* Microservices and SOA
-* NodeJS
-* Database Sharing and Paritioning
+1. Fat Client Architectures - React
+1. API Architectures other than REST - GraphQL
+1. Push Processing and Web Sockets - 
+1. NoSQL Databases - MongoDB
+1. NodeJS - with Express, compared to Sinatra
+1. Database Sharding and Paritioning - ActiveRecord v6
+1. Graph Databases - Amazon Neptune, Neo4J
+1. Full Text Search - ElasticSearch
+1. Global Scaling Architecutes - Amazon Beanstalk
+1. Containerizing - Docker
+1. Client programming languages - Elm
+
