--- a/content/content/lectures/part2/25_cloudarch.md.erb
+++ b/content/content/lectures/part2/25_cloudarch.md.erb
@@ -18,7 +18,13 @@ cat: nt
 ##### Interesting but not required extra reading
 * [Types of Cloud Computing](https://aws.amazon.com/types-of-cloud-computing/)
 
+### TIME CHANGE
+* I have to be at a very special event at 4:15
+* Lets switch things so that 4:15 to 4:50 is the recitation
+* And I pick up where I left off on Wednesday instead of recitation
+
 <%= include_topic :sinatra_technology_options %>
+
 
 #### Discussion
 * Any teams choosing to do something interesting beyond the basics?
@@ -26,6 +32,9 @@ cat: nt
   * Asynchronous communication
   * If supplier is down or slow, this doesn't harm the consumer
   * Using the database as the queue
+
+#### Student Presentation Topics
+* 
 
 <%= include_topic :thecloud %>
 <%= include_topic :devops %>
