--- a/content/content/lectures/part2/30_architecting_for_scale.md.erb
+++ b/content/content/lectures/part2/30_architecting_for_scale.md.erb
@@ -7,6 +7,9 @@ cat: scale
 <%= homework_hdr %>
 
 1. <%= partbadge %> Read and think about <%= link_to_topic :sinatra_series_5 %> and answer the warmup questions that are stated there. <%= deliverable "Pdf with your responses" %>
+
+##### Ongoing work
+
 1. <%= partbadge %> <%= codebadge %> **Complete nt 0.2 as a team:** See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage. <%= team_deliverable %(Github repo zipped up.) %>
 
 #### Discussion
@@ -17,6 +20,8 @@ cat: scale
   * Demonstrate and look at my code
 * Questions
   * What is an API exactly?
+
+<%= include_topic :sinatra_series_5 %>
   
 <%= include_topic :scaling %>
 
