--- a/content/content/lectures/part2/35_web_services.md.erb
+++ b/content/content/lectures/part2/35_web_services.md.erb
@@ -22,10 +22,13 @@ cat: nt
     You have a few other intersting alternatives: You can use [Swagger](https://swagger.io) to document your API and actually generate code for the service and the client. Or, you can use [GraphQL](http://graphql.org) to design a totally different, modern, yet non-REST Api. Both of these options are more advanced and would be recognized as a way to make your product more advanced. <%= team_deliverable "Markdown file documentation. Submit to Latte and also store in doc/ directory of your repo." %>
 1. **Teams continue to work on nanoTwitter 0.3**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
-#### Interesting, not mandatory, reading
+##### Interesting, not mandatory, reading
 * [So What's This GraphQL thing I keep hearing about?](https://medium.freecodecamp.org/so-whats-this-graphql-thing-i-keep-hearing-about-baf4d36c20cf)
 * [Anatomy of a GraphQL query](https://dev-blog.apollodata.com/the-anatomy-of-a-graphql-query-6dffa9e9e747)
 * [Sinatra GraphQL example](https://github.com/robinjmurphy/ruby-graphql-server-example)
+
+##### Ongoing work
+* **Teams continue to work on nanoTwitter**. See: <%= link_to_topic :nt_outline %> for detailed submission instructions and specifics for this stage.
 
 <%= include_topic :rest_web_services %>
 
